--- a/.github/actions/install-cache-deps/action.yml
+++ b/.github/actions/install-cache-deps/action.yml
@@ -32,18 +32,16 @@ runs:
       with:
         node-version: ${{ env.NODE_VERSION }}
 
-    - uses: pnpm/action-setup@v2
-      name: Install pnpm
-      with:
-        version: 8
-        run_install: false
+    - name: Install pnpm
+      shell: bash
+      run: npm install -g pnpm@8
 
     - name: Get pnpm store directory
       shell: bash
       run: |
         echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
-    - uses: actions/cache@v3
+    - uses: actions/cache@v4
       name: Setup pnpm cache
       with:
         path: ${{ env.STORE_PATH }}
@@ -58,7 +56,7 @@ runs:
       id: playwright-version
       run: echo 'PLAYWRIGHT_VERSION=$(cat package.json | jq -r '.dependencies.playwright' || 'latest')' >> $GITHUB_ENV
 
-    - uses: actions/cache@v3
+    - uses: actions/cache@v4
       if: ${{ inputs.BROWSER_BINARIES }}
       id: playwright-cache
       with:
