ci(github): trigger release deployment on push to `main`

--- a/.github/workflows/bdt-fe--release.yml
+++ b/.github/workflows/bdt-fe--release.yml
@@ -10,6 +10,8 @@ on:
         required: true
         default: "stg"
     branches: [release/*]
+  push:
+    branches: [main]
 
 permissions:
   checks: write
