wip(front): adjust category and post title padding (#1216)

--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,7 @@ crash.*.log
 ############################
 _ci/backstop/bd/bitmaps_test/*
 _ci/backstop/bd/html_report/*
+_ci/backstop/bd/bitmaps_reference/local
 
 ############################
 # Browser Performance Tests
