--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --compiler-warnings \"css-unused-selector:ignore\"",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch --compiler-warnings \"css-unused-selector:ignore\"",
     "prettier": "prettier",
+    "lint.fix": "prettier --write .",
     "baseline": "mv -f ./.report/bundle/current/* ./.report/bundle/previous",
     "bundle-stats": "bundle-stats",
     "lint": "prettier --check . && eslint .",
