--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##post.post.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##post.post.json
@@ -8,7 +8,7 @@
       "searchable": true,
       "pageSize": 100,
       "mainField": "title",
-      "defaultSortBy": "updatedAt",
+      "defaultSortBy": "createdAt",
       "defaultSortOrder": "DESC"
     },
     "metadatas": {
