--- a/.github/workflows/bdt-fe--release.yml
+++ b/.github/workflows/bdt-fe--release.yml
@@ -26,14 +26,14 @@ jobs:
     name: 💨
     uses: ./.github/workflows/lint.yml
     with:
-      env: ${{ inputs.env }}
+      env: ${{ github.event_name == 'push' && 'prd' || inputs.env }}
 
   build_deploy:
     name: 🚀
     needs: lint
     uses: ./.github/workflows/bd-fe.yml
     with:
-      env: ${{ inputs.env }}
+      env: ${{ github.event_name == 'push' && 'prd' || inputs.env }}
     secrets:
       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -66,7 +66,7 @@ jobs:
     needs: build_deploy
     uses: ./.github/workflows/test-backstop.yml
     with:
-      env: ${{ inputs.env }}
+      env: ${{ github.event_name == 'push' && 'prd' || inputs.env }}
     secrets:
       GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
       AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
@@ -80,7 +80,7 @@ jobs:
     needs: build_deploy
     uses: ./.github/workflows/test-lighthouse.yml
     with:
-      env: ${{ inputs.env }}
+      env: ${{ github.event_name == 'push' && 'prd' || inputs.env }}
     secrets:
       AWS_S3_BUCKET_REPORTS: ${{ secrets.AWS_S3_BUCKET_REPORTS }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -94,7 +94,7 @@ jobs:
     needs: build_deploy
     uses: ./.github/workflows/test-psi.yml
     with:
-      env: ${{ inputs.env }}
+      env: ${{ github.event_name == 'push' && 'prd' || inputs.env }}
     secrets:
       PSI_APIKEY: ${{ secrets.PSI_APIKEY }}
       GH_WORKFLOW_TOKEN: ${{ secrets.GH_WORKFLOW_TOKEN }}
@@ -104,7 +104,7 @@ jobs:
     needs: [backstop, lighthouse, pagespeed]
     runs-on: ubuntu-latest
     environment:
-      name: ${{ inputs.env }}
+      name: ${{ github.event_name == 'push' && 'prd' || inputs.env }}
       url: "https://${{ vars.WWW_DOMAIN }}"
     steps:
       - name: generate
