--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -42,7 +42,7 @@ jobs:
 
     concurrency:
       group: backstop
-      cancel-in-progress: true
+      cancel-in-progress: false
 
     env:
       DEPLOY_ENV: ${{ inputs.env }}
