fix(front): prevent vite tsconfig.json warnings
adds svelte-kit sync before build command for CI/CD

--- a/front/package.json
+++ b/front/package.json
@@ -15,9 +15,9 @@
     "dev.p": "vite --config vite.local.config.js dev",
     "dev": "vite --config vite.config.js dev",
     "build.l": "WARN_ONLY=true vite --config vite.local.config.js build",
-    "build.s": "vite --config vite.config.js build",
-    "build.p": "vite --config vite.config.js build",
-    "build": "vite --config vite.config.js build",
+    "build.s": "svelte-kit sync && vite --config vite.config.js build",
+    "build.p": "svelte-kit sync && vite --config vite.config.js build",
+    "build": "svelte-kit sync && vite --config vite.config.js build",
     "preview": "vite --config vite.config.js preview",
     "preview.local": "vite --config vite.local.config.js preview",
     "postbuild.l": "npx -y -q svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -i '**/cv/*/**' -t --attribution=false --domain https://local.dgrebb.com",
