fix(front): revert all RSS changes but replace ampersands

--- a/.github/workflows/bdt-fe--release.yml
+++ b/.github/workflows/bdt-fe--release.yml
@@ -8,7 +8,7 @@ on:
         description: "Target deployment environment."
         type: environment
         required: true
-        default: "stg"
+        default: "prd"
     branches: [release/*]
   push:
     branches: [main]
