--- a/_ci/perf/package.json
+++ b/_ci/perf/package.json
@@ -21,9 +21,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "axe-core": "^4.8.3",
+    "axe-core": "^4.8.4",
     "axe-html-reporter": "^2.2.3",
-    "lighthouse": "11.4.0",
+    "lighthouse": "11.6.0",
     "psi": "^4.1.0",
     "wallace-cli": "^3.0.0"
   },
@@ -37,10 +37,10 @@
   },
   "pnpm": {
     "overrides": {
-      "node-forge@<1.0.0": ">=1.0.0",
       "node-forge@<1.3.0": ">=1.3.0",
       "got@<11.8.5": ">=11.8.5",
-      "json-bigint@<1.0.0": ">=1.0.0"
+      "json-bigint@<1.0.0": ">=1.0.0",
+      "ip@<2.0.1": ">=2.0.1"
     }
   }
 }
