--- a/front/package.json
+++ b/front/package.json
@@ -49,6 +49,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "highlight.js": "^11.9.0",
     "html-minifier-terser": "^7.2.0",
     "marked": "^12.0.0",
     "marked-alert": "^2.0.1",
