fix(ci): add playwright to dependencies and get version from namespace

--- a/.github/actions/install-cache-deps/action.yml
+++ b/.github/actions/install-cache-deps/action.yml
@@ -54,7 +54,7 @@ runs:
       shell: bash
       working-directory: ${{ inputs.WORKSPACE_ROOT }}
       id: playwright-version
-      run: echo 'PLAYWRIGHT_VERSION=$(cat package.json | jq -r '.dependencies.playwright' || 'latest')' >> $GITHUB_ENV
+      run: echo "PLAYWRIGHT_VERSION=$(cat package.json | jq -r '.dependencies.["@playwright/test"]' || 'latest')" >> $GITHUB_ENV
 
     - uses: actions/cache@v4
       if: ${{ inputs.BROWSER_BINARIES }}
@@ -67,12 +67,12 @@ runs:
     - shell: bash
       if: ${{ inputs.BROWSER_BINARIES && steps.playwright-cache.outputs.cache-hit != 'true' }}
       working-directory: ${{ inputs.WORKSPACE_ROOT }}
-      run: npx playwright install --with-deps
+      run: pnpx playwright install --with-deps
 
     - shell: bash
       if: ${{ inputs.BROWSER_BINARIES && steps.playwright-cache.outputs.cache-hit != 'true' }}
       working-directory: ${{ inputs.WORKSPACE_ROOT }}
-      run: npx playwright install-deps
+      run: pnpx playwright install-deps
 
     - name: ↧ Install Remaining Dependencies
       shell: bash
