--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -24,10 +24,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "backstopjs": "github:dgrebb/dg-backstop#1.0.1",
+    "backstopjs": "github:dgrebb/dg-backstop#1.0.2",
     "cors": "^2.8.5",
     "http-server": "^14.1.1",
     "patch-package": "^8.0.0",
+    "@playwright/test": "1.42.1",
     "pm2": "^5.3.1",
     "super-simple-web-server": "github:dgrebb/super-simple-web-server#0.0.2"
   },
