--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,7 @@
     "bundle-stats": "bundle-stats",
     "lint": "prettier --check . && eslint .",
     "dev.l": "vite --config vite.local.config.js dev",
-    "dev.s": "vite --config vite.config.js dev",
+    "dev.s": "vite --config vite.local.config.js dev",
     "dev.p": "vite --config vite.config.js dev",
     "dev": "vite --config vite.config.js dev",
     "build.l": "WARN_ONLY=true vite --config vite.local.config.js build",
