--- a/.github/actions/install-cache-deps/action.yml
+++ b/.github/actions/install-cache-deps/action.yml
@@ -54,7 +54,7 @@ runs:
       shell: bash
       working-directory: ${{ inputs.WORKSPACE_ROOT }}
       id: playwright-version
-      run: echo "PLAYWRIGHT_VERSION=$(cat package.json | jq -r '.dependencies."@playwright/test"' || 'latest')" >> $GITHUB_ENV
+      run: echo "PLAYWRIGHT_VERSION=$(cat package.json | jq -r '.dependencies.playwright' || 'latest')" >> $GITHUB_ENV
 
     - uses: actions/cache@v4
       if: ${{ inputs.BROWSER_BINARIES }}
