--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -29,6 +29,7 @@
     "http-server": "^14.1.1",
     "patch-package": "^8.0.0",
     "@playwright/test": "1.42.1",
+    "playwright": "^1.42.1",
     "pm2": "^5.3.1",
     "super-simple-web-server": "github:dgrebb/super-simple-web-server#0.0.2"
   },
