--- a/.github/workflows/PRs.yml
+++ b/.github/workflows/PRs.yml
@@ -2,8 +2,7 @@ name: Assign and Review
 run-name: "🦾 Reviewing ${{ github.event_name == 'pull_request' && format('PR #{0}: {1}', github.event.pull_request.number, github.event.pull_request.title) || format('latest {0}', github.ref_name) }}"
 
 on:
-  pull_request:
-    types: [opened, reopened, synchronize]
+  workflow_dispatch:
 
 permissions: write-all
 
@@ -18,9 +17,9 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      # - name: Review
-      #   uses: grebbops/ai-codereviewer@develop
-      #   with:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      #     exclude: ".github/**/*, **/*.json, **/*.md, _ci/backstop/bd/**/*"
+      - name: Review
+        uses: grebbops/ai-codereviewer@develop
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          exclude: ".github/**/*, **/*.json, **/*.md, _ci/backstop/bd/**/*"
