--- a/back/package.json
+++ b/back/package.json
@@ -15,19 +15,19 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-color-picker": "4.22.1",
-    "@strapi/plugin-i18n": "4.22.1",
-    "@strapi/plugin-sentry": "4.22.1",
+    "@strapi/plugin-color-picker": "4.23.1",
+    "@strapi/plugin-i18n": "4.23.1",
+    "@strapi/plugin-sentry": "4.23.1",
     "@strapi/plugin-seo": "^1.9.8",
-    "@strapi/plugin-users-permissions": "4.22.1",
-    "@strapi/provider-upload-aws-s3": "4.22.1",
-    "@strapi/strapi": "4.22.1",
-    "pg": "^8.11.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@strapi/plugin-users-permissions": "4.23.1",
+    "@strapi/provider-upload-aws-s3": "4.23.1",
+    "@strapi/strapi": "4.23.1",
+    "pg": "^8.11.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
-    "strapi-plugin-config-sync": "^1.2.3",
-    "styled-components": "5.3.3"
+    "styled-components": "5.3.3",
+    "strapi-plugin-config-sync": "^1.2.5"
   },
   "engines": {
     "node": ">=16.0.0 <=20.x.x",
