--- a/front/package.json
+++ b/front/package.json
@@ -38,17 +38,17 @@
     "@iconify-json/icomoon-free": "^1.1.8",
     "@iconify-json/icon-park-outline": "^1.1.15",
     "@iconify-json/mdi": "^1.1.66",
-    "@iconify-json/ph": "^1.1.12",
+    "@iconify-json/ph": "^1.1.13",
     "@iconify-json/simple-icons": "^1.1.101",
     "@iconify-json/typcn": "^1.1.9",
-    "@playwright/test": "^1.43.1",
+    "@playwright/test": "^1.44.0",
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.5.7",
+    "@sveltejs/kit": "^2.5.9",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.1.1",
+    "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.38.0",
+    "eslint-plugin-svelte": "^2.39.0",
     "highlight.js": "^11.9.0",
     "html-minifier-terser": "^7.2.0",
     "marked": "^12.0.2",
@@ -57,23 +57,23 @@
     "postcss": "^8.4.38",
     "postcss-import": "^16.1.0",
     "postcss-nested": "^6.0.1",
-    "postcss-nesting": "^12.1.2",
+    "postcss-nesting": "^12.1.4",
     "prettier": "^3.2.5",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-svelte": "^3.2.3",
     "rollup-plugin-bundle-stats": "^4.12.2",
     "rollup-plugin-visualizer": "^5.12.0",
     "slugger": "^1.0.1",
-    "svelte": "^4.2.15",
+    "svelte": "^4.2.17",
     "svelte-check": "^3.7.1",
-    "svelte-highlight": "7.6.0",
+    "svelte-highlight": "7.6.1",
     "svelte-meta-tags": "^3.1.2",
     "svelte-sitemap": "^2.6.0",
     "typescript": "^5.4.5",
     "unplugin-icons": "^0.19.0",
     "vite": "^5.2.11",
     "vite-plugin-progress": "^0.0.7",
-    "vitest": "^1.5.3"
+    "vitest": "^1.6.0"
   },
   "engines": {
     "node": ">=16.0.0 <=20.x.x",
@@ -83,8 +83,8 @@
   "type": "module",
   "pnpm": {
     "patchedDependencies": {
-      "svelte-highlight@7.6.0": "patches/svelte-highlight@7.6.0.patch",
-      "@sveltejs/kit@2.5.7": "patches/@sveltejs__kit@2.5.7.patch"
+      "@sveltejs/kit@2.5.9": "patches/@sveltejs__kit@2.5.9.patch",
+      "svelte-highlight@7.6.1": "patches/svelte-highlight@7.6.1.patch"
     }
   }
 }
