--- a/front/package.json
+++ b/front/package.json
@@ -33,47 +33,47 @@
   },
   "devDependencies": {
     "@accuser/svelte-plausible-analytics": "dgrebb/svelte-plausible-analytics#downstream/feature-support-custom-pageview-properties",
-    "@iconify-json/entypo-social": "^1.1.8",
-    "@iconify-json/gg": "^1.1.9",
-    "@iconify-json/icomoon-free": "^1.1.8",
-    "@iconify-json/icon-park-outline": "^1.1.15",
-    "@iconify-json/mdi": "^1.1.66",
-    "@iconify-json/ph": "^1.1.13",
-    "@iconify-json/simple-icons": "^1.1.105",
-    "@iconify-json/typcn": "^1.1.9",
-    "@playwright/test": "^1.44.1",
-    "@sveltejs/adapter-static": "^3.0.2",
-    "@sveltejs/kit": "^2.5.18",
-    "@sveltejs/vite-plugin-svelte": "^3.1.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^9.5.0",
+    "@iconify-json/entypo-social": "^1.1.9",
+    "@iconify-json/gg": "^1.1.10",
+    "@iconify-json/icomoon-free": "^1.1.9",
+    "@iconify-json/icon-park-outline": "^1.1.16",
+    "@iconify-json/mdi": "^1.1.68",
+    "@iconify-json/ph": "^1.1.14",
+    "@iconify-json/simple-icons": "^1.1.114",
+    "@iconify-json/typcn": "^1.1.10",
+    "@playwright/test": "^1.46.1",
+    "@sveltejs/adapter-static": "^3.0.4",
+    "@sveltejs/kit": "^2.5.24",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.39.4",
-    "highlight.js": "^11.9.0",
+    "eslint-plugin-svelte": "^2.43.0",
+    "highlight.js": "^11.10.0",
     "html-minifier-terser": "^7.2.0",
-    "marked": "^13.0.0",
+    "marked": "^13.0.3",
     "marked-alert": "^2.0.1",
     "patch-package": "^8.0.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.41",
     "postcss-import": "^16.1.0",
-    "postcss-nested": "^6.0.1",
-    "postcss-nesting": "^12.1.5",
-    "prettier": "^3.3.2",
+    "postcss-nested": "^6.2.0",
+    "postcss-nesting": "^13.0.0",
+    "prettier": "^3.3.3",
     "prettier-plugin-css-order": "^2.1.2",
-    "prettier-plugin-svelte": "^3.2.4",
-    "rollup-plugin-bundle-stats": "^4.13.2",
+    "prettier-plugin-svelte": "^3.2.6",
+    "rollup-plugin-bundle-stats": "^4.14.2",
     "rollup-plugin-visualizer": "^5.12.0",
     "slugger": "^1.0.1",
-    "svelte": "^4.2.18",
-    "svelte-check": "^3.8.0",
-    "svelte-highlight": "7.6.1",
-    "svelte-meta-tags": "^3.1.2",
+    "svelte": "^4.2.19",
+    "svelte-check": "^3.8.6",
+    "svelte-highlight": "7.7.0",
+    "svelte-meta-tags": "^3.1.3",
     "svelte-sitemap": "^2.6.0",
-    "typescript": "^5.4.5",
-    "unplugin-icons": "^0.19.0",
-    "vite": "^5.3.1",
+    "typescript": "^5.5.4",
+    "unplugin-icons": "^0.19.2",
+    "vite": "^5.4.2",
     "vite-plugin-progress": "^0.0.7",
-    "vitest": "^1.6.0"
+    "vitest": "^2.0.5"
   },
   "engines": {
     "node": ">=16.0.0 <=20.x.x",
@@ -83,8 +83,8 @@
   "type": "module",
   "pnpm": {
     "patchedDependencies": {
-      "@sveltejs/kit@2.5.18": "patches/@sveltejs__kit@2.5.18.patch",
-      "svelte-highlight@7.6.1": "patches/svelte-highlight@7.6.1.patch"
+      "svelte-highlight": "patches/svelte-highlight.patch",
+      "@sveltejs/kit": "patches/@sveltejs__kit.patch"
     }
   }
 }
